Improve jail system logic, fix duplicate notifications, and refine language handling